--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "lodash": "^4.17.5",
+    "node-plop": "^0.9.0",
+    "plop": "^1.9.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -20,7 +22,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "precommit": "lint-staged",
-    "flow": "flow"
+    "flow": "flow",
+    "generate": "plop --plopfile generators/index.js"
   },
   "lint-staged": {
     "src/**/*.{js,json}": [
