--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "reselect": "^3.0.1",
     "styled-components": "^3.1.6"
   },
   "scripts": {
