--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "history": "^4.7.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
     "node-plop": "^0.9.0",
     "plop": "^1.9.1",
     "prop-types": "^15.6.1",
@@ -15,8 +17,10 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "reselect": "^3.0.1",
     "styled-components": "^3.1.6"
   },
