--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.1",
     "classnames": "^2.2.5",
+    "graphql": "^0.13.1",
     "history": "^4.7.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
@@ -13,6 +15,7 @@
     "plop": "^1.9.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-apollo": "^2.1.0-beta.3",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
